fix: logo overflow en moviles con DPR alto 10062026

--- a/src/styles/responsive-refinements.scss
+++ b/src/styles/responsive-refinements.scss
@@ -765,9 +765,9 @@
 
   .nav-logo {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
     margin-left: 0;
-    width: 75%;
+    flex: 1 1 0;
     min-width: 0;
     overflow: hidden;
   }
